finished the asignment

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
                 <div class="funny-content-items">
                     <div class="funny-img">
-                        <img src="images/Rectangle 4.png">
+                        <img src="images/Rectangle 5.png">
                         <div class="hover-effect">
                             <div class="hover-content">
                                 <i class="fa-solid fa-circle-play"></i>
@@ -188,7 +188,7 @@
 
                 <div class="funny-content-items">
                     <div class="funny-img">
-                        <img src="images/Rectangle 4.png">
+                        <img src="images/Rectangle 6.png">
                         <div class="hover-effect">
                             <div class="hover-content">
                                 <i class="fa-solid fa-circle-play"></i>
@@ -201,7 +201,7 @@
 
                 <div class="funny-content-items">
                     <div class="funny-img">
-                        <img src="images/Rectangle 4.png">
+                        <img src="images/Rectangle 7.png">
                         <div class="hover-effect">
                             <div class="hover-content">
                                 <i class="fa-solid fa-circle-play"></i>
@@ -381,6 +381,8 @@
                     <li><a href="">Privacy Settings</a></li>
                 </ul>
             </div>
+            <p class="copy-write"><small>Play Games &copy; Gamer
+            &copy; 2000-2023 Gamer Bangladesh</small></p>
         </div>
     </footer>
 </body>
