finished the asignment

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- navbar -->
     <nav>
         <div class="nav-container flex-between">
             <div class="logo-container flex-between">
@@ -62,6 +63,7 @@
             </ul>
         </div>
     </nav>
+    <!-- header section -->
     <header>
        <div class="header-container flex-between">
         <div class="header-content-container">
@@ -152,6 +154,7 @@
         </div>
     </section>
     <main>
+        <!-- funny video section -->
         <section class="funny-video">
             <div class="funny-video-header-content">
                 <h2 class="section-title">Online Games <span class="text-gradient">Funny Videos</span></h2>
@@ -214,6 +217,7 @@
                 
             </div>
         </section>
+        <!-- play game section -->
         <section class="play-game flex-between">
             <div class="play-game-img">
                 <img class="main-img" src="images/Rectangle 67.png">
@@ -227,6 +231,7 @@
                 </p>
             </div>
         </section>
+        <!-- icon section -->
         <section class="icon-section">
             <div class="icon">
                 <img src="images/Rectangle 11.png" alt="">
@@ -267,6 +272,7 @@
             
         </section>
     </main>
+    <!-- footer section -->
     <footer>
         <div class="footer-container">
             <div class="footer-logo-container">
